Make text bold and prevent wrapping

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body.invertedColors {
   grid-template-columns: 1fr 1fr;
   grid-row: 2;
   grid-column: 1/3;
+  font-weight: bold;
 }
 
 #name {
@@ -77,4 +78,5 @@ body.invertedColors {
   justify-self: center;
   z-index: 1;
   padding: 10px;
+  white-space: nowrap;
 }
